  * don't ever delete anything.
  * keep the format consistent (79 char width, M/D/Y date format) and do not
    use tabs but use spaces for formatting
  * accompany each entry with github issue/PR number (Issue #xyz)
  * release numbers follow "Semantic Versioning" http://semver.org

------------------------------------------------------------------------------
??/??/?? IAlibay, BFedder, inomag, Agorfa, aya9aladdin

 * 2.2.0

Fixes
  * Fixed DumpReader triclinic box dimensions reading. (Issue #3386, PR #3403)
  * Updated the badge in README of MDAnalysisTest to point to Github CI Actions

Enhancements

Changes
  * ITPParser no longer adds an angle for water molecules that have the SETTLE
    constraint applied to them. This mirrors the way the constraint is handled
    in AMBER. (Issue #2417, PR #3564)

Deprecations


03/06/22 IAlibay, melomcr, mdd31, ianmkenney, richardjgowers, hmacdope,
         orbeckst, scal444, p-j-smith, edisj, Atharva7K, ojeda-e, jbarnoud,
         yangtcai

 * 2.1.0

Fixes
  * Use uint64_t loop counters in C level distance functions to avoid overflow
    for large arrays (Issue #3512, PR #3513).
  * Prevents attempts to close an already closed NamedStream (Issue #3386)
  * Added missing exe_err import in hole.py. Fixed a bug in HoleAnalysis where
    kwarg was passed instead of object to generate path (Issue #3493, PR #3496)
  * Fixes creation of vmd surfaces in hole2 when using non-contiguous frames
    with start/stop/step (Issue #3476)
  * Allow empty strings to be passed to HydrogenBondAnalysis (Issue #3453).
  * Avoid integer overflow in NSGrid with too many grids (Issue #3183)
  * Fix ITPParser charge reading (Issue #3419).
  * TRRWriter preserves timestep data (Issue #3350).
  * Fixed Universe creation from a custom object which only provided a topology,
    previously raised a TypeError. (Issue #3443)
  * Documentation fixes (Issues #3224, #2667)
  * Fixed string attributes (e.g. resname, segid) not working on Residues and Segments