@@ -178,6 +178,7 @@ Chronological list of authors
   - Pratik Gupta
   - Alexander Gorfer
   - Aya M. Alaa
+  - Kazi Shudipto Amin
 
 External code
 -------------
